fixed contractop info box height. (problem on iphone)

--- a/contractorStyle.css
+++ b/contractorStyle.css
@@ -12,7 +12,7 @@ body {
     align-items: center;
     justify-content: center;
     width: 350px;
-    height: 600px;
+    height: 705px;
     border: 10px solid black;
     padding: 25px;
     margin: 25px;
